[GC] Fixed job cancellation issue (#146)
* [GC] Fixed job cancellation issue

* [GC] Removed unnecessary parallelism